@@ -1,3 +1,7 @@
+2014-01-31  Dave Abrahams  <dave@boostpro.com>
+
+	* gnus-sum.el (gnus-summary-open-group-with-article): New command.
+
 2014-01-31  Magnus Henoch  <magnus.henoch@gmail.com>
 
 	* dns.el (dns-servers-up-to-date-p): New function to see whether the
